--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: TechiDaily
+title: Ai Editing Video
 subtitle: 'Enjoy life easier but more creative!'
-description: 'TechiDaily is the largest, most trusted online solution for everyone to learn, share their knowledge, and help other people.'
-keywords: 'Tools, File explorer, Convert, Repair tools, data recovery'
-author: Nova
+description: 'Ai Editing Video is the largest, most trusted online solution for everyone to learn, share their knowledge, and help other people.'
+keywords: 'video edit tool, video editing ai, ai video editing, ai editing tool, Tools, File explorer, Convert, Repair tools, data recovery'
+author: Chloe
 language: en
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://android-transfer.techidaily.com
+url: https://ai-editing-video.techidaily.com
 permalink: :title/
 permalink_defaults:
 pretty_urls:
@@ -112,10 +112,10 @@ sitemap:
 ## 执行 hexo clean && hexo deploy 。
 ## 如果提交失败
 ## cd .deploy_git
-## git push -u https://$GITHUB_DEPLOY_TOKEN@github.com/techidaily/site-android-transfer.git HEAD:gh-pages --force
+## git push -u https://$GITHUB_DEPLOY_TOKEN@github.com/techidaily/site-ai-editing-video.git HEAD:gh-pages --force
 deploy:
   type: git
   repo:  
-    url: https://github.com/techidaily/site-android-transfer.git
+    url: https://github.com/techidaily/site-ai-editing-video.git
     branch: gh-pages
     token: $GITHUB_DEPLOY_TOKEN
